# crypto-quant

./: .gitignore  LICENSE  Makefile  README.md  STRUCTURE.md  pyproject.toml
.github/workflows/: crypto-quant-app.yml
db/: README.txt
src/: __init__.py  backtest_all_strategies.py  backtester.py  basic_analysis.py  basic_backtest.py  basic_ml_backtest.py  basic_quant_analysis.py  cached_binance_client.py  feature_engineering.py  ml_model.py  setup.py  simple_binance_client.py
src/tests/: test_klines.py  test_stats.py
